design: add style for reasons to buy

--- a/src/Resources/styles/front/common/main.less
+++ b/src/Resources/styles/front/common/main.less
@@ -104,6 +104,7 @@
 @import "components/list/pickup-place.less";
 @import "components/list/products.less";
 @import "components/list/products-line.less";
+@import "components/list/reasons-to-buy.less";
 @import "components/list/todo-products-slider.less";
 @import "components/list/simple.less";
 @import "components/list/socials.less";
@@ -159,6 +160,7 @@
 @import "components/box/progress.less";
 @import "components/box/promo-code.less";
 @import "components/box/promo-image.less";
+@import "components/box/reasons-to-buy.less";
 @import "components/box/scroll.less";
 @import "components/box/search.less";
 @import "components/box/slider.less";
