--- a/templates/Front/Content/Order/sent.html.twig
+++ b/templates/Front/Content/Order/sent.html.twig
@@ -88,4 +88,10 @@
         </div>
     </div>
 
+    <div class="web__line">
+        <div class="web__container">
+            {% include 'Front/Content/ReasonsToBuy/index.html.twig' %}
+        </div>
+    </div>
+
 {% endblock %}
