--- a/templates/Front/Content/Product/detail.html.twig
+++ b/templates/Front/Content/Product/detail.html.twig
@@ -59,6 +59,12 @@
         </div>
     {% endif %}
 
+    <div class="web__line">
+        <div class="web__container">
+            {% include 'Front/Content/ReasonsToBuy/index.html.twig' %}
+        </div>
+    </div>
+
     {% block last_visited_products %}
         {{ render(controller('App\\Controller\\Front\\LastVisitedProductsController:showAction')) }}
     {% endblock %}
