--- a/templates/Front/Content/AboutUs/info.html.twig
+++ b/templates/Front/Content/AboutUs/info.html.twig
@@ -96,4 +96,10 @@
             </div>
         </div>
     </div>
+
+    <div class="web__line">
+        <div class="web__container">
+            {% include 'Front/Content/ReasonsToBuy/index.html.twig' %}
+        </div>
+    </div>
 {% endblock %}
