--- a/templates/Front/Content/Blog/Article/detail.html.twig
+++ b/templates/Front/Content/Blog/Article/detail.html.twig
@@ -9,86 +9,92 @@
 {% endblock %}
 
 {% block main_content %}
-<div class="web__line">
-    <div class="web__container">
-        <div class="box-blog">
-            <h1 class="box-blog__title">
-                {% if blogArticle.getSeoH1(domainId) is not null %}
-                    {{ blogArticle.getSeoH1(domainId) }}
-                {% else %}
-                    {{ blogArticle.name }}
-                {% endif %}
-            </h1>
-            <div class="box-blog__content">
-                <div class="box-blog__list">
-                    <div class="in-article__date">{{ blogArticle.publishDate|formatDate }}</div>
-
-                    <div class="in-article__text-perex in-user-text">
-                        {{ blogArticle.perex|raw }}
-                    </div>
-
-                    {% if imageExists(blogArticle) %}
-                        <div class="in-article__main-img">
-                            {{ image(blogArticle, { itemprop: 'image' }) }}
-                        </div>
-                        <div class="in-article__img-caption">
-                            {{ blogArticle.mainPhotoTitle }}
-                        </div>
+    <div class="web__line">
+        <div class="web__container">
+            <div class="box-blog">
+                <h1 class="box-blog__title">
+                    {% if blogArticle.getSeoH1(domainId) is not null %}
+                        {{ blogArticle.getSeoH1(domainId) }}
+                    {% else %}
+                        {{ blogArticle.name }}
                     {% endif %}
+                </h1>
+                <div class="box-blog__content">
+                    <div class="box-blog__list">
+                        <div class="in-article__date">{{ blogArticle.publishDate|formatDate }}</div>
 
-                    <div class="in-article__text in-user-text">
-                        {{ blogArticle.description|raw }}
+                        <div class="in-article__text-perex in-user-text">
+                            {{ blogArticle.perex|raw }}
+                        </div>
+
+                        {% if imageExists(blogArticle) %}
+                            <div class="in-article__main-img">
+                                {{ image(blogArticle, { itemprop: 'image' }) }}
+                            </div>
+                            <div class="in-article__img-caption">
+                                {{ blogArticle.mainPhotoTitle }}
+                            </div>
+                        {% endif %}
+
+                        <div class="in-article__text in-user-text">
+                            {{ blogArticle.description|raw }}
+                        </div>
                     </div>
-                </div>
-                <div class="box-blog__panel">
-                    <div class="box-blog__section">
-                        {{ render(controller('App\\Controller\\Front\\BlogCategoryController:listAction', {blogArticle: blogArticle})) }}
-                    </div>
-                    {% if articleProducts is not empty %}
+                    <div class="box-blog__panel">
                         <div class="box-blog__section">
-                            <div class="box-blog__section__title">
-                                {{ 'V článku píšeme o těchto produktech'|trans }}
-                            </div>
-                            {{ render(controller('App\\Controller\\Front\\BlogArticleController:productsAction', {blogArticle: blogArticle, articleProducts: articleProducts})) }}
+                            {{ render(controller('App\\Controller\\Front\\BlogCategoryController:listAction', {blogArticle: blogArticle})) }}
                         </div>
-                    {% endif %}
-                </div>
-            </div>
-        </div>
-
-        <div class="box-blog__gallery">
-            {% set galleryImages = getImages(blogArticle) %}
-            {% set showGallery = galleryImages|length > 0 %}
-            {% set showGalleryMaxCount = 4 %}
-
-            {% if showGallery %}
-                <h2>{{ 'Další fotografie'|trans }}</h2>
-
-                <div class="box-blog-gallery dont-print js-gallery">
-                    <div class="box-blog-gallery__images">
-                        {% for galleryImage in galleryImages %}
-                            <div class="box-blog-gallery__item {% if loop.index > showGalleryMaxCount %} display-none{% endif %} js-gallery-item">
-                                <a href="{{ imageUrl(galleryImage, 'original') }}" class="box-blog-gallery__item__link js-gallery-slide-link">
-                                    {{ image(galleryImage, {size: 'thumbnail'}) }}
-                                </a>
-                            </div>
-                        {% endfor %}
-                    </div>
-                    <div class="box-blog-gallery__links">
-                        {% if galleryImages|length > showGalleryMaxCount %}
-                            <div class="box-blog-gallery__item box-blog-gallery__item--more js-gallery-item-more">
-                                <a href="#" class="box-blog-gallery__item__link">
-                                    {{ 'Další'|trans }} ({{ galleryImages|length - showGalleryMaxCount }})
-                                </a>
+                        {% if articleProducts is not empty %}
+                            <div class="box-blog__section">
+                                <div class="box-blog__section__title">
+                                    {{ 'V článku píšeme o těchto produktech'|trans }}
+                                </div>
+                                {{ render(controller('App\\Controller\\Front\\BlogArticleController:productsAction', {blogArticle: blogArticle, articleProducts: articleProducts})) }}
                             </div>
                         {% endif %}
                     </div>
                 </div>
-            {% endif %}
-        </div>
+            </div>
 
+            <div class="box-blog__gallery">
+                {% set galleryImages = getImages(blogArticle) %}
+                {% set showGallery = galleryImages|length > 0 %}
+                {% set showGalleryMaxCount = 4 %}
+
+                {% if showGallery %}
+                    <h2>{{ 'Další fotografie'|trans }}</h2>
+
+                    <div class="box-blog-gallery dont-print js-gallery">
+                        <div class="box-blog-gallery__images">
+                            {% for galleryImage in galleryImages %}
+                                <div class="box-blog-gallery__item {% if loop.index > showGalleryMaxCount %} display-none{% endif %} js-gallery-item">
+                                    <a href="{{ imageUrl(galleryImage, 'original') }}" class="box-blog-gallery__item__link js-gallery-slide-link">
+                                        {{ image(galleryImage, {size: 'thumbnail'}) }}
+                                    </a>
+                                </div>
+                            {% endfor %}
+                        </div>
+                        <div class="box-blog-gallery__links">
+                            {% if galleryImages|length > showGalleryMaxCount %}
+                                <div class="box-blog-gallery__item box-blog-gallery__item--more js-gallery-item-more">
+                                    <a href="#" class="box-blog-gallery__item__link">
+                                        {{ 'Další'|trans }} ({{ galleryImages|length - showGalleryMaxCount }})
+                                    </a>
+                                </div>
+                            {% endif %}
+                        </div>
+                    </div>
+                {% endif %}
+            </div>
+        </div>
     </div>
-</div>
+
+    <div class="web__line">
+        <div class="web__container">
+            {% include 'Front/Content/ReasonsToBuy/index.html.twig' %}
+        </div>
+    </div>
+
     {% block last_visited_products %}
         {{ render(controller('App\\Controller\\Front\\LastVisitedProductsController:showAction')) }}
     {% endblock %}
