--- a/templates/Front/Content/Article/footerMenu.html.twig
+++ b/templates/Front/Content/Article/footerMenu.html.twig
@@ -1,12 +1,6 @@
 <div class="list-menu list-menu--footer js-footer-link-content">
     <ul class="list-menu__column dont-print">
-        {% for article in articles %}
-            <li class="list-menu__item">
-                <a class="list-menu__item__link" href="{{ url('front_article_detail', { id: article.id }) }}">{{ article.name }}</a>
-                {#<span class="in-badge js-not-implemented-yet">12</span>#}
-            </li>
-        {% endfor %}
-        {% if isPlacementAboutUs %}
+        {% if isPlacementServices %}
             <li class="list-menu__item">
                 <a href="{{ url(
                     'front_blogcategory_detail', {
@@ -15,12 +9,19 @@
                 ) }}"
                    class="list-menu__item__link"
                 >
-                    {{ 'Blog'|trans }}
+                    {{ 'Magazín'|trans }}
                 </a>
             </li>
+        {% endif %}
+        {% for article in articles %}
+            <li class="list-menu__item">
+                <a class="list-menu__item__link" href="{{ url('front_article_detail', { id: article.id }) }}">{{ article.name }}</a>
+            </li>
+        {% endfor %}
+        {% if isPlacementServices %}
             <li class="list-menu__item">
                 <a href="{{ url('front_store_index') }}" class="list-menu__item__link">
-                    {{ 'Prodejny'|trans }}
+                    {{ 'Prodejna v Liberci'|trans }}
                 </a>
             </li>
             <li class="list-menu__item">
