design: add style for list last visited and flags

--- a/src/Resources/styles/front/common/components/list/reasons-to-buy.less
+++ b/src/Resources/styles/front/common/components/list/reasons-to-buy.less
@@ -39,6 +39,10 @@
             margin: 0;
 
             font-size: @font-size-small;
+
+            &__link {
+                text-decoration: underline;
+            }
         }
     }
 }
