--- a/src/Resources/styles/front/common/core/base.less
+++ b/src/Resources/styles/front/common/core/base.less
@@ -110,18 +110,12 @@ h2 {
 h3 {
     margin: 0 0 10px 0;
 
-    font-size: @font-size-small;
     font-weight: 700;
-
-    @media @query-lg {
-        margin-bottom: 15px;
-    }
+    font-size: @font-size-big;
 
     @media @query-vl {
         margin-bottom: 20px;
         line-height: 24px;
-
-        font-size: 18px;
     }
 }
 
