--- a/templates/Front/Content/ReasonsToBuy/index.html.twig
+++ b/templates/Front/Content/ReasonsToBuy/index.html.twig
@@ -35,7 +35,7 @@
                 </div>
                 <p class="list-reasons-to-buy__item__text">
                     {{ 'Moderní'|trans }}
-                    <a class="js-not-implemented-yet" href="">{{ 'prodejna v centru'|trans }}</a>
+                    <a class="list-reasons-to-buy__item__text__link js-not-implemented-yet" href="">{{ 'prodejna v centru'|trans }}</a>
                     {{ 'Liberce'|trans }}
                 </p>
             </li>
@@ -45,7 +45,7 @@
                 </div>
                 <p class="list-reasons-to-buy__item__text">
                     {{ 'Každý týden'|trans }}
-                    <a class="js-not-implemented-yet" href="">{{ 'nová nabídka'|trans }}</a>
+                    <a class="list-reasons-to-buy__item__text__link js-not-implemented-yet" href="">{{ 'nová nabídka'|trans }}</a>
                     {{ 'za výhodné ceny'|trans }}
                 </p>
             </li>
@@ -55,7 +55,7 @@
                 </div>
                 <p class="list-reasons-to-buy__item__text">
                     {{ 'Rybařině rozumíme. V týmu je i'|trans }}
-                    <a class="js-not-implemented-yet" href="">{{ 'mistr světa'|trans }}</a>
+                    <a class="list-reasons-to-buy__item__text__link js-not-implemented-yet" href="">{{ 'mistr světa'|trans }}</a>
                 </p>
             </li>
         </ul>
