--- a/templates/Styleguide/styleguide.html.twig
+++ b/templates/Styleguide/styleguide.html.twig
@@ -238,28 +238,78 @@
                     <section id="flags" class="styleguide-module anchor clearfix">
                         <h2 class="styleguide-module__title">Flags</h2>
                         <p class="styleguide-module__paragraph">Flag colors are loaded from administration as inline style. But you can override it by class modification.</p>
-                        <div class="in-flag in-flag--static">
-                            <span class="in-flag__item" style="background-color: #181a22;">
-                                TOP
-                            </span>
+                        <div style="position: relative; height: 100px;">
+                            <div class="in-flag">
+                                <span class="in-flag__item" style="background-color: #3ea938;">
+                                    Default flag item
+                                </span>
+                                <span class="in-flag__item" style="background-color: #d53030;">
+                                    Default flag item
+                                </span>
+                                <span class="in-flag__item" style="background-color: #30b0d5;">
+                                    Default flag item
+                                </span>
+                            </div>
                         </div>
                         <div style="position: relative; height: 100px;">
-                            <div class="in-flag in-flag--in-list">
-                                <span class="in-flag__item" style="background-color: #181a22;">
-                                    ACTION
+                            <div class="in-flag in-flag--detail">
+                                <span class="in-flag__item" style="background-color: #3ea938;">
+                                    Flag in detail
+                                </span>
+                                <span class="in-flag__item" style="background-color: #d53030;">
+                                    Flag in detail
+                                </span>
+                                <span class="in-flag__item" style="background-color: #30b0d5;">
+                                    Flag in detail
+                                </span>
+                            </div>
+                        </div>
+                        <div style="position: relative; height: 100px;">
+                            <div class="in-flag in-flag--slider">
+                                <span class="in-flag__item" style="background-color: #3ea938;">
+                                    Flag in slider
+                                </span>
+                                <span class="in-flag__item" style="background-color: #d53030;">
+                                    Flag in slider
+                                </span>
+                                <span class="in-flag__item" style="background-color: #30b0d5;">
+                                    Flag in slider
                                 </span>
                             </div>
                         </div>
                         <div class="styleguide-module__editor">
                             <textarea class="codemirror-html" id="html-flags">
-<div class="in-flag in-flag--static">
-    <span class="in-flag__item" style="background-color: #181a22;">
-        TOP
+<div class="in-flag">
+    <span class="in-flag__item" style="background-color: #3ea938;">
+        Default flag item
+    </span>
+    <span class="in-flag__item" style="background-color: #d53030;">
+        Default flag item
+    </span>
+    <span class="in-flag__item" style="background-color: #30b0d5;">
+        Default flag item
     </span>
 </div>
-<div class="in-flag in-flag--in-list">
-    <span class="in-flag__item" style="background-color: #181a22;">
-        ACTION
+<div class="in-flag in-flag--detail">
+    <span class="in-flag__item" style="background-color: #3ea938;">
+        Flag in detail
+    </span>
+    <span class="in-flag__item" style="background-color: #d53030;">
+        Flag in detail
+    </span>
+    <span class="in-flag__item" style="background-color: #30b0d5;">
+        Flag in detail
+    </span>
+</div>
+<div class="in-flag in-flag--slider">
+    <span class="in-flag__item" style="background-color: #3ea938;">
+        Flag in slider
+    </span>
+    <span class="in-flag__item" style="background-color: #d53030;">
+        Flag in slider
+    </span>
+    <span class="in-flag__item" style="background-color: #30b0d5;">
+        Flag in slider
     </span>
 </div>
                             </textarea>
