--- a/src/Resources/styles/front/common/components/box/last-visited.less
+++ b/src/Resources/styles/front/common/components/box/last-visited.less
@@ -1,15 +1,15 @@
-@box-last-visited-bottom-gap: 30px;
-@box-last-visited-title-bottom-gap: 26px;
+@box-last-visited-bottom-gap: 51px;
+@box-last-visited-title-bottom-gap: 42px;
 
 .box-last-visited {
     margin-bottom: @box-last-visited-bottom-gap;
 
     &__title {
         display: block;
-        line-height: 36px;
         margin-bottom: @box-last-visited-title-bottom-gap;
         text-align: center;
 
         color: @color-base;
+        text-transform: uppercase;
     }
 }
