--- a/src/Resources/styles/front/common/components/in/flag.less
+++ b/src/Resources/styles/front/common/components/in/flag.less
@@ -1,84 +1,63 @@
-@in-flag-item-top-gap: 12px;
-@in-flag-item-size: 70px;
-@in-flag-item-size-medium: 60px;
-@in-flag-item-size-small: 46px;
+@in-flag-item-gap: 5px;
+@in-flag-item-height: 17px;
 @in-flag-item-font-size: 18px;
 @in-flag-item-font-size-small: @font-size;
-@in-flag-in-list-position-top: 0;
-@in-flag-in-list-position-right: 0;
 
 .in-flag {
     .clearfix();
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
     position: absolute;
-    top: @in-flag-in-list-position-top;
-    right: @in-flag-in-list-position-right;
+    margin-left: -@in-flag-item-gap;
+    bottom: 0;
+    left: 0;
+    right: 0;
 
-    &--in-list {
-        top: @in-flag-in-list-position-top;
-        right: @in-flag-in-list-position-right;
+    &--detail {
+        flex-direction: column;
+        justify-content: flex-start;
+        top: 0;
+        left: 0;
+        right: auto;
+        bottom: auto;
     }
 
-    &--static {
-        position: relative;
+    &--slider {
+        flex-direction: column;
+        justify-content: flex-start;
+        top: 0;
+        left: 0;
+        right: auto;
+        bottom: auto; 
+    }
+
+    @media @query-tablet {
+        display: none;
     }
 
     &__item {
-        float: right;
-        clear: right;
-        display: none;
-        justify-content: center;
-        align-items: center;
-        width: @in-flag-item-size-small;
-        height: @in-flag-item-size-small;
-        margin-bottom: @in-flag-item-top-gap;
+        min-height: @in-flag-item-height;
+        margin-bottom: @in-flag-item-gap;
+        margin-left: @in-flag-item-gap;
+        line-height: 13px;
         text-align: center;
-        padding: 0 5px;
-        word-break: break-word;
+        padding: 2px 7px;
 
-        overflow: hidden;
-        border-radius: 50%;
         color: @color-f;
+        border-radius: @radius-very-small;
         font-size: 10px;
-        font-weight: 700;
-
-        @media @query-lg {
-            display: flex;
-            width: @in-flag-item-size;
-            height: @in-flag-item-size;
-
-            font-size: @in-flag-item-font-size;
-        }
-
-        &:last-child {
-            margin-bottom: 0;
-        }
-
-        &:first-child {
-            display: flex;
-        }
-
-        &--smaller-text {
-            @media @query-lg {
-                font-size: @in-flag-item-font-size-small;
-            }
-        }
-
-        .in-flag--static &  {
-            float: left;
-            clear: none;
-        }
-
-        .in-flag--in-list &  {
-            @media @query-md {
-                width: @in-flag-item-size-medium;
-                height: @in-flag-item-size-medium;
-
-                font-size: 13px;
-            }
-        }
+        background-color: @color-light;
+        text-transform: uppercase;
 
         .in-flag--detail & {
-            display: flex;
+            line-height: 21px;
+            padding: 1px 10px;
+
+            font-size: @font-size-small;
+            font-weight: 700;
+            border-radius: @radius-medium;
         }
     }
 }
