--- a/src/Resources/styles/front/common/components/list/last-visited.less
+++ b/src/Resources/styles/front/common/components/list/last-visited.less
@@ -1,13 +1,10 @@
-@list-last-visited-item-count: 6;
-@list-last-visited-item-padding: 20px;
-@list-last-visited-item-image-size: 130px;
-@list-last-visited-item-image-bottom-gap: 20px;
-@list-last-visited-item-title-line-height: 24px;
-@list-last-visited-item-title-rows: 2;
+@list-last-visited-item-gap: 10px;
+@list-last-visited-item-image-size: 80px;
+@list-last-visited-item-title-line-height: 18px;
 
-@list-last-visited-arrow-size: 38px;
+@list-last-visited-arrow-size: 18px;
 @list-last-visited-arrow-gap: 20px;
-@list-last-visited-side-gap: 45px;
+@list-last-visited-side-gap: 15px;
 
 .list-last-visited {
     display: flex;
@@ -16,9 +13,12 @@
     width: calc(~"@{calc-base} - 2*@{list-last-visited-side-gap}");
     margin: 0 @list-last-visited-side-gap;
 
+    @media @query-vl {
+        margin: 0;
+    }
+
     @media @query-xl {
         width: 100%;
-        margin: 0;
     }
 
     .slick-list {
@@ -34,19 +34,25 @@
     &__arrow {
         position: absolute;
         top: 50%;
-        transform: translateY(-50%);
+        transform: translateY(-50%) rotate(90deg);
 
         cursor: pointer;
-        color: @color-primary;
+        color: @color-turquoise;
+        transition: @transition;
         font-size: @list-last-visited-arrow-size;
         height: @list-last-visited-arrow-size + 2px;
 
         &:hover {
-            color: @color-primary;
+            color: darken(@color-turquoise, 10%);
         }
 
         &.slick-disabled {
-            color: @color-inactive;
+            opacity: 0.5;
+            cursor: auto;
+
+            &:hover {
+                color: @color-turquoise;
+            }
         }
 
         &--prev {
@@ -60,7 +66,7 @@
         &--next {
             right: -(@list-last-visited-arrow-size + @list-last-visited-arrow-gap/2 - 3px);
 
-            transform: rotate(180deg) translateY(50%);
+            transform: translateY(-50%) rotate(-90deg);
 
             @media @query-xl {
                 right: -(@list-last-visited-arrow-size + @list-last-visited-arrow-gap - 2px);
@@ -82,29 +88,25 @@
     }
 
     &__item {
-        width: calc(~"@{calc-base}/@{list-last-visited-item-count}");
-
-        &__in {
-            padding: 0 @list-last-visited-item-padding 3px @list-last-visited-item-padding;
-            height: 100%;
-        }
-
         &__block {
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
+            margin: 0 @list-last-visited-item-gap;
             height: 100%;
 
-            text-decoration: none;
             color: @color-base;
+
+            &:hover {
+                text-decoration: none;
+            }
         }
 
         &__image {
             display: flex;
             position: relative;
             align-self: center;
-            margin-bottom: @list-last-visited-item-image-bottom-gap;
-            height: @list-last-visited-item-image-size;
-            width: 100%;
+            height: 100%;
+            width: @list-last-visited-item-image-size;
 
             img {
                 .center-image();
@@ -112,27 +114,26 @@
             }
         }
 
-        &__title {
-            display: flex;
-            justify-content: center;
-            height: @list-last-visited-item-title-rows*@list-last-visited-item-title-line-height;
-            line-height: @list-last-visited-item-title-line-height;
-            margin-bottom: 0;
-            width: 100%;
-            text-align: center;
-            overflow: hidden;
-
-            font-size: @font-size;
-            font-weight: 400;
-            color: @color-base;
-        }
-
         &__info {
-            text-align: center;
-            margin-top: auto;
+            text-align: left;
+            width: calc(~"100% - @{list-last-visited-item-image-size}");
+            padding-left: 10px;
+
+            &__title {
+                display: flex;
+                line-height: @list-last-visited-item-title-line-height;
+                margin-bottom: 4px;
+                width: 100%;
+                text-align: left;
+                overflow: hidden;
+    
+                font-size: @font-size-extra-small;
+                font-weight: 400;
+                color: @color-base;
+            }
 
             &__availability {
-                font-size: @font-size-extra-small;
+                font-size: @font-size-small;
 
                 .in-badge {
                     display: none;
@@ -142,49 +143,34 @@
                     }
                 }
 
-                &__spacer {
-                    display: block;
-                    margin-bottom: 7px;
-                }
-
                 &__text {
                     display: block;
                     line-height: 18px;
-
-                    font-size: 13px;
-                    font-weight: 700;
                 }
             }
 
             &__price {
-                &__item {
-                    display: none;
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: flex-start;
+                align-items: center;
 
-                    &__main {
-                        display: block;
-                        padding: 5px 0;
+                &__main {
+                    display: block;
 
-                        color: @color-price;
-                        font-weight: 700;
-                    }
+                    color: @color-price;
+                    font-size: @font-size-small;
+                    font-weight: 700;
+                }
 
-                    &__old {
-                        display: inline;
-                        padding-left: 5px;
-                        font-weight: normal;
-                        font-size: 11px;
-                        color: @color-price-old;
-                        text-decoration: line-through;
-                    }
-
-                    &__discount {
-                        display: inline;
-                        padding-left: 5px;
-
-                        color: @color-price-discount;
-                        font-size: 11px;
-                        font-weight: 400;
-                    }
+                &__old {
+                    display: inline;
+                    padding-left: 5px;
+                    font-weight: normal;
+                    font-size: @font-size-extra-small;
+                    color: @color-price-old;
+                    text-decoration: line-through;
                 }
             }
         }
