--- a/src/Resources/styles/front/common/core/variables.less
+++ b/src/Resources/styles/front/common/core/variables.less
@@ -132,6 +132,7 @@
 @radius: 8px;
 @radius-medium: 6px;
 @radius-small: 3px;
+@radius-very-small: 2px;
 
 
 //// Default postfixes for responsive helpers generator
