--- a/templates/Front/Inline/Product/productFlagsMacro.html.twig
+++ b/templates/Front/Inline/Product/productFlagsMacro.html.twig
@@ -6,13 +6,7 @@
                 {% if onlyFirst %}
                     {% if loop.first %}
                         <span
-                            class="in-flag__item
-                            {% if productFlag.name|length == 8 %}
-                                in-flag__item--middle-text
-                            {% elseif productFlag.name|length > 8 %}
-                                in-flag__item--smaller-text
-                            {% endif %}
-                            "
+                            class="in-flag__item"
                             style="background-color: {{ productFlag.rgbColor }};"
                         >
                             {{ productFlag.name }}
@@ -20,13 +14,7 @@
                     {% endif %}
                 {% else %}
                     <span
-                        class="in-flag__item
-                        {% if productFlag.name|length == 8 %}
-                            in-flag__item--middle-text
-                        {% elseif productFlag.name|length > 8 %}
-                            in-flag__item--smaller-text
-                        {% endif %}
-                        "
+                        class="in-flag__item"
                         style="background-color: {{ productFlag.rgbColor }};"
                     >
                         {{ productFlag.name }}
