--- a/templates/Front/Layout/footer.html.twig
+++ b/templates/Front/Layout/footer.html.twig
@@ -95,8 +95,13 @@
             <footer class="web__container web__container--transparent footer-bottom">
                 <div class="footer-bottom__domains">
                     <div class="footer-bottom__domains__item">
-                        <img class="footer-bottom__domains__item__icon" src="{{ asset('assets/frontend/images/slovakia.png') }}" alt="{{ 'Slovakia'|trans }}"/>
-                        <a class="footer-bottom__domains__item__link" href="{{ findUrlByDomainId('front_homepage', [], 2)}}">{{ 'Tovar na Slovensko'|trans }}</a>
+                        {% if isSlovakDomain() is same as (true) %}
+                            <img class="footer-bottom__domains__item__icon" src="{{ asset('assets/frontend/images/czechia.png') }}" alt="{{ 'Czechia'|trans }}"/>
+                            <a class="footer-bottom__domains__item__link" href="{{ findUrlByDomainId('front_homepage', [], 1)}}">{{ 'Zboží do Česka'|trans }}</a>
+                        {% else %}
+                            <img class="footer-bottom__domains__item__icon" src="{{ asset('assets/frontend/images/slovakia.png') }}" alt="{{ 'Slovakia'|trans }}"/>
+                            <a class="footer-bottom__domains__item__link" href="{{ findUrlByDomainId('front_homepage', [], 2)}}">{{ 'Tovar na Slovensko'|trans }}</a>
+                        {% endif %}
                     </div>
                 </div>
                 <div class="footer-bottom__copyright dont-print">
