Uncommented the rest of former action prices in frontend templates that should now show standard prices.

--- a/templates/Front/Content/Search/autocomplete.html.twig
+++ b/templates/Front/Content/Search/autocomplete.html.twig
@@ -42,13 +42,11 @@
                                         {% else %}
                                             {{ sellingPrice.priceWithVat|price }}
                                         {% endif %}
-                                        {#
-                                        {% if sellingPrice.isActionPrice %}
+                                        {% if sellingPrice.hasHigherStandardPrice %}
                                             <span class="search-hint__product__item__price search-hint__product__item__price--old">
-                                                {{ sellingPrice.defaultProductPrice.priceWithVat|price }}
+                                                {{ sellingPrice.standardPrice.priceWithVat|price }}
                                             </span>
                                         {% endif %}
-                                        #}
                                     </span>
                                 {% endif %}
                             </span>
