--- a/templates/Front/Content/Advert/bigBannerOnHomepage.html.twig
+++ b/templates/Front/Content/Advert/bigBannerOnHomepage.html.twig
@@ -33,12 +33,10 @@
                                     <a href="{{ url }}" title="{{ advertProduct.name }}">
                                         <div class="box-special-offer__products__item__content__title" href="{{ url }}" title="{{ advertProduct.name }}">{{ advertProduct.name }}</div>
                                         <span class="box-special-offer__products__item__content__price"> {{ sellingPrice.priceWithVat|price }}
-                                            {#
-                                            {% if sellingPrice.isActionPrice %}
-                                                <span class="box-special-offer__products__item__content__price__old">{{ sellingPrice.defaultProductPrice.priceWithVat|price }}</span>
+                                            {% if sellingPrice.hasHigherStandardPrice %}
+                                                <span class="box-special-offer__products__item__content__price__old">{{ sellingPrice.standardPrice.priceWithVat|price }}</span>
                                                 <span class="box-special-offer__products__item__content__price__discount">-{{ sellingPrice.pricePercentageDifference|formatPercent }}</span>
                                             {% endif %}
-                                            #}
                                         </span>
                                     </a>
                                 </div>
