--- a/templates/Front/Content/Cart/index.html.twig
+++ b/templates/Front/Content/Cart/index.html.twig
@@ -109,11 +109,9 @@
                                                     </a>
                                                 </div>
                                                 <div class="table-cart__cell__price js-cart-item-total-price">
-                                                    {#
-                                                    {% if cartItemPrice.unitPrice.isActionPrice %}
-                                                        <span class="table-cart__cell__price__line-through">{{ cartItemPrice.unitPrice.defaultProductPrice.priceWithVat|price }}</span>
+                                                    {% if cartItemPrice.unitPrice.hasHigherStandardPrice %} %}
+                                                        <span class="table-cart__cell__price__line-through">{{ cartItemPrice.unitPrice.standardPrice.priceWithVat|price }}</span>
                                                     {% endif %}
-                                                    #}
                                                     <div class="table-cart__cell__price__primary">
                                                         {{ cartItemPrice.unitPrice.priceWithVat|price }}
                                                     </div>
