Added more places to show registration discount text based on TF-75 and TF-76.

--- a/templates/Front/Content/Cart/index.html.twig
+++ b/templates/Front/Content/Cart/index.html.twig
@@ -126,6 +126,11 @@
                                                             {% endfor %}
                                                         </div>
                                                     {% endif %}
+                                                    {% if cartItem.product.isRegistrationDiscountDisabled and registrationDiscountExclusionText is not empty %}
+                                                        <div class="in-message--info">
+                                                            {{ registrationDiscountExclusionText }}
+                                                        </div>
+                                                    {% endif %}
                                                 </div>
                                             </div>
                                         </div>
