--- a/templates/Front/Content/Product/boxDetail.html.twig
+++ b/templates/Front/Content/Product/boxDetail.html.twig
@@ -103,13 +103,13 @@
                             {% if not product.isMainVariant and product.calculatedAvailability %}
                                 {% include 'Front/Inline/Product/detailAvailability.html.twig' with { product: product } %}
                             {% endif %}
-                            {% if product.isRegistrationDiscountDisabled and registrationDiscountExclusionText is not empty %}
-                                <div class="in-message--info">
-                                    {{ registrationDiscountExclusionText }}
-                                </div>
-                            {% endif %}
                             <div itemprop="offers" itemscope itemtype="http://schema.org/Offer" class="box-detail-add__prices">
                                 {% if not product.isMainVariant %}
+                                    {% if product.isRegistrationDiscountDisabled and registrationDiscountExclusionText is not empty %}
+                                        <div class="in-message--info">
+                                            {{ registrationDiscountExclusionText }}
+                                        </div>
+                                    {% endif %}
                                     {{ self.productPrice(product) }}
                                     <meta itemprop="priceCurrency" content="{{ currencyCode(domain.id) }}">
                                     <meta itemprop="price" content="{{ sellingPrice.priceWithVat|moneyFormat }}">
@@ -183,6 +183,13 @@
                                                     {{ productParameterValue.parameter.name }}:
                                                     {{ productParameterValue.value.text }}
                                                 {% endfor %}
+                                            </td>
+                                            <td>
+                                                {% if variant.isRegistrationDiscountDisabled and registrationDiscountExclusionText is not empty %}
+                                                    <div class="in-message--info">
+                                                        {{ registrationDiscountExclusionText }}
+                                                    </div>
+                                                {% endif %}
                                             </td>
                                             <td class="table-variants__cell table-variants__cell--action">
                                                 {{ render(controller('App\\Controller\\Front\\CartController:addProductFormAction', {product: variant, type: 'small'})) }}
