design: edit small css issues after test

--- a/templates/Front/Content/AboutUs/info.html.twig
+++ b/templates/Front/Content/AboutUs/info.html.twig
@@ -102,4 +102,8 @@
             {% include 'Front/Content/ReasonsToBuy/index.html.twig' %}
         </div>
     </div>
+
+    {% block last_visited_products %}
+        {{ render(controller('App\\Controller\\Front\\LastVisitedProductsController:showAction')) }}
+    {% endblock %}
 {% endblock %}
