--- a/src/Resources/styles/front/common/components/box/breadcrumb.less
+++ b/src/Resources/styles/front/common/components/box/breadcrumb.less
@@ -1,7 +1,7 @@
-@box-breadcrumb-padding-horizontal: 20px;
+@box-breadcrumb-padding-horizontal: 18px;
 @box-breadcrumb-padding-vertical: 15px;
 @box-breadcrumb-font-size: @font-size-small;
-@box-breadcrumb-top-move: -11px;
+@box-breadcrumb-top-move: -4px;
 @box-breadcrumb-bottom-gap: 25px;
 
 .box-breadcrumb {
@@ -23,6 +23,7 @@
 
     &__item {
         margin-bottom: @box-breadcrumb-padding-vertical;
+        margin-right: @box-breadcrumb-padding-horizontal;
 
         color: @color-primary;
         font-size: @box-breadcrumb-font-size;
@@ -35,19 +36,17 @@
 
         &--separator {
             position: relative;
-            margin: 0 @box-breadcrumb-padding-horizontal;
+            margin: 0 @box-breadcrumb-padding-horizontal 0 0;
             top: @box-breadcrumb-top-move;
 
             text-decoration: none;
 
             .box-detail & {
-                margin: 0 @box-breadcrumb-padding-horizontal @box-breadcrumb-padding-vertical;
+                margin: 0 @box-breadcrumb-padding-horizontal @box-breadcrumb-padding-vertical 0;
                 top: -3px;
             }
 
             .svg {
-                transform: rotate(-90deg);
-
                 font-size: 16px;
                 color: @color-primary;
             }
