--- a/templates/Front/Content/Product/preListingCategoryList.html.twig
+++ b/templates/Front/Content/Product/preListingCategoryList.html.twig
@@ -20,6 +20,8 @@
                     {{ category.getSeoH1(domain.id)|default(category.name) }}
                 </div>
 
+                {% include 'Front/Content/Benefits/list.html.twig' %}
+
                 {{ render(controller('App\\Controller\\Front\\AdvertController:boxAction', {'advert': category.getAdvert(), 'sizeInfoName': 'category' })) }}
 
                 {% include 'Front/Content/Category/categoryList.html.twig' with {'categories': visibleChildren, 'currentCategory': category} %}
